--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,1 +1,11 @@
 <h1><%= @restaurant.name %> </h1>
+
+<%= link_to 'Back to list', restaurants_path, class: "btn btn-primary" %>
+<%= link_to 'Add a review', new_restaurant_review_path(@restaurant), class: "btn btn-primary" %>
+
+
+<ul>
+<% @restaurant.reviews.each do |review| %>
+  <li><%= review.content %> </li>
+<% end %>
+</ul>
