Added rating to the restaurant page

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -6,6 +6,6 @@
 
 <ul>
 <% @restaurant.reviews.each do |review| %>
-  <li><%= review.content %> </li>
+  <li><%= review.content %> <%= review.rating %>/5 </li>
 <% end %>
 </ul>
