--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,3 +1,4 @@
 <h1 class="text-center"> Add a new restaurant </h1>
 
 <%= render 'form' %>
+<%= link_to 'Back to list', restaurants_path, class: "btn btn-primary" %>
